fix build again

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
   },
+  "homepage": "https://ury.org.uk/myradio2-alpha",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
