--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/draft-js": "^0.10.38",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/qs": "^6.9.0",
     "@types/react": "^16.9.0",
@@ -20,6 +21,7 @@
     "@types/react-router-dom": "^5.1.3",
     "draft-js": "^0.11.4",
     "draft-js-export-html": "^1.4.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "qs": "^6.9.1",
     "react": "^16.12.0",
