--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^6.12.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "prettier": "^1.19.1"
   }
 }
