--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,12 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.dev_only
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea/
+.vscode/
+deps.png
