--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@blueprintjs/core": "^3.23.1",
     "@blueprintjs/icons": "^3.13.0",
     "@blueprintjs/select": "^3.11.2",
@@ -20,9 +21,17 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/yup": "^0.28.3",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
     "draft-js": "^0.11.4",
     "draft-js-export-html": "^1.4.1",
     "formik": "^2.1.4",
+    "graphql": "^15.1.0",
+    "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "qs": "^6.9.1",
@@ -41,7 +50,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "apollo:schema": "apollo client:download-schema -c apollo.config.js src/schema.graphql",
+    "apollo:codegen": "apollo client:codegen -c apollo.config.js --target typescript __generated__"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,7 +72,9 @@
   "devDependencies": {
     "@testing-library/dom": "^6.12.0",
     "@testing-library/react-hooks": "^3.2.1",
+    "@ury1350/prettier-config": "^1.0.1",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.13.1"
-  }
+  },
+  "prettier": "@ury1350/prettier-config"
 }
