--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
     "draft-js": "^0.11.4",
     "draft-js-export-html": "^1.4.1",
     "formik": "^2.1.4",
-    "framer-motion": "^1.11.1",
+    "framer-motion": "^2.0.0-beta.77",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
@@ -45,6 +46,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "timeshift-js": "^1.1.1",
     "typescript": "~3.7.2",
     "yup": "^0.28.5"
   },
