--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
-    "@types/yup": "^0.28.3",
+    "@types/yup": "^0.29.3",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -48,7 +48,7 @@
     "redux": "^4.0.5",
     "timeshift-js": "^1.1.1",
     "typescript": "~3.7.2",
-    "yup": "^0.28.5"
+    "yup": "^0.29.1"
   },
   "homepage": "https://ury.org.uk/myradio2-alpha",
   "scripts": {
@@ -57,7 +57,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "apollo:schema": "apollo client:download-schema -c apollo.config.js src/schema.graphql",
-    "apollo:codegen": "apollo client:codegen -c apollo.config.js --target typescript __generated__ && node scripts/loadTypes.js",
+    "apollo:codegen": "cd src && apollo client:codegen -c apollo.config.js --target typescript __generated__ && cd .. && node scripts/loadTypes.js",
     "prettier": "prettier --write 'src/**/*.{js,ts,jsx,tsx,css,scss}'"
   },
   "eslintConfig": {
