--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^2.0.0-beta.77",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
+    "immer": "^7.0.5",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "qs": "^6.9.1",
