Implement almost the entire create show form
All that's missing is a rich text editor for the description

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@apollo/react-hooks": "^3.1.5",
     "@blueprintjs/core": "^3.23.1",
     "@blueprintjs/icons": "^3.13.0",
-    "@blueprintjs/select": "^3.11.2",
+    "@blueprintjs/select": "^3.13.5",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -54,8 +54,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "apollo:schema": "apollo client:download-schema -c apollo.config.js src/schema.graphql",
-    "apollo:codegen": "cd src && apollo client:codegen -c apollo.config.js --target typescript __generated__ && cd .. && node scripts/loadTypes.js",
+    "apollo:schema": "../node_modules/.bin/apollo client:download-schema -c apollo.config.js src/schema.graphql",
+    "apollo:codegen": "cd src && ../node_modules/.bin/apollo client:codegen -c apollo.config.js --target typescript __generated__ && cd .. && node scripts/loadTypes.js",
     "prettier": "prettier --write 'src/**/*.{js,ts,jsx,tsx,css,scss}'"
   },
   "eslintConfig": {
@@ -78,6 +78,7 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/node-fetch": "^2.5.7",
     "@ury1350/prettier-config": "^1.0.1",
+    "apollo": "^2.30.1",
     "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.13.1"
