--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "formik": "^2.1.4",
     "framer-motion": "^2.0.0-beta.77",
     "graphql": "^15.1.0",
-    "graphql-tag": "^2.10.3",
+    "graphql.macro": "^1.4.2",
     "immer": "^7.0.5",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
